Correct small typo

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
   </hgroup>
   <article data-timings="">
     <ul>
-<li><p>The pyramid plot was implemented using ggplot2 and is part of <code>utils.R</code> and can easily be modified to re-use it in other projects</p></li>
-<li><p>The basic idea was to plot to different bar plots at the same time (Don&#39;t run example below)</p></li>
+<li><p>The pyramid plot was implemented using ggplot2 and is part of <code>utils.R</code>. It can easily be modified for re-use other projects</p></li>
+<li><p>The basic idea was to plot two different bar plots at the same time (Don&#39;t run example below)</p></li>
 </ul>
 
 <pre><code class="r">demographic_data &lt;- demographic_data %&gt;% filter(name == country_name)  
