Correct small typo

--- a/index.html
+++ b/index.html
@@ -82,12 +82,13 @@
 
 <slide class="" id="slide-3" style="background:;">
   <hgroup>
-    <h2>Discussing one feature in more detail</h2>
+    <h2>One feature in more detail</h2>
   </hgroup>
   <article data-timings="">
     <ul>
-<li><p>The pyramid plot was implemented using ggplot2 and is part of <code>utils.R</code>. It can easily be modified for re-use other projects</p></li>
-<li><p>The basic idea was to plot two different bar plots at the same time (Don&#39;t run example below)</p></li>
+<li>The pyramid plot was implemented using ggplot2 and is part of <code>utils.R</code></li>
+<li>It can easily be modified for re-use in other projects</li>
+<li>The basic idea was two plot to different bar plots at the same time (Don&#39;t run example below)</li>
 </ul>
 
 <pre><code class="r">demographic_data &lt;- demographic_data %&gt;% filter(name == country_name)  
@@ -147,7 +148,7 @@ limits = c((y_max * -1) - 1, y_max + 1))
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='Discussing one feature in more detail'>
+        data-slide=3 title='One feature in more detail'>
          3
       </a>
     </li>
