--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
   </hgroup>
   <article data-timings="">
     <ul>
-<li>The pyramid plot was implemented using ggplot2 and is part of <code>utils.R</code> and can easily be modified to re-use it in other projects</li>
-<li>The basic idea was two plot to different bar plots at the same time and multiply the underlying y-values of one of them by -1 (Don&#39;t run example below)</li>
+<li>The pyramid plot was implemented using ggplot2 and is part of <code>utils.R</code>. It can easily be modified for re-use in other projects</li>
+<li>The basic idea was to plot two different bar plots at the same time and multiply the underlying y-values of one of them by -1 (Don&#39;t run example below)</li>
 </ul>
 
 <pre><code class="r">demographic_data &lt;- demographic_data %&gt;% filter(name == country_name)  
